--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; URL='employees/list">
+<!--<meta http-equiv="refresh" content="0; URL='employees/list">-->
+<meta http-equiv="refresh" content="0; URL='employees/home">
